fix contrast

--- a/src/public/css/themes/noctix.css
+++ b/src/public/css/themes/noctix.css
@@ -24,8 +24,8 @@ html{
 --accent-color-strong: #3B2073;
 --accent-color-dark: #220F35;
 
---text-accent: white;
---color-contrast: white;
+--text-accent: #aaa;
+--color-contrast: #aaa;
 
   
 
